# Pdf-Rag-App

./: README.md  pyproject.toml
RAG_app/: app.ipynb  docker-compose.yaml  rag_with_pdf.ipynb
RAG_app/Vector/: chroma.sqlite3
