[project]
name = "rag-learn"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.5.9",
    "langchain>=1.3.9",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.2",
    "langchain-ollama>=1.1.0",
    "langchain-text-splitters>=1.1.2",
    "ollama>=0.6.2",
    "pypdf>=6.13.2",
    "requests>=2.34.2",
]
